<?xml version="1.0"?>
<package format="2">
  <name>qt_action_executor</name>
  <version>1.0.0</version>
  <description>A package for a robot converting high level actions into low level actions used in MigrAVE</description>

  <author email="michal.stolarz@smail.inf.h-brs.de">Michal Stolarz</author>
  <maintainer email="robotics@h-brs.de">MAS robotics</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>migrave_ros_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>migrave_ros_msgs</exec_depend>

  <export>
  </export>
</package>
